@@ -4,51 +4,24 @@ A simple tool to calculate the overall performance of an investment portfolio.
 
 See http://buchen.github.com/portfolio/ for more details.
 
+## Prerequisites
+
+* [Java 7](http://www.java.com)
+* [Maven](http://maven.apache.org)
+* [Eclipse](http://www.eclipse.org)
+
 ## Building with Maven
 
-### Install 3rd party libraries into your local Maven repository:
+### Configure
 
-[SWTChart](http://www.swtchart.org/)
-
-```
-mvn install:install-file \
-    -Dfile=org.swtchart_0.8.0.v20120301.jar \
-    -DgroupId=org.swtchart \
-    -DartifactId=org.swtchart \
-    -Dversion=0.8.0 \
-    -Dpackaging=jar \
-    -DgeneratePom=true
-```
-
-[TreeMapLib](http://code.google.com/p/treemaplib/)
-
-```
-mvn install:install-file \
-    -Dfile=tm_core_0.0.4.jar \
-    -DgroupId=de.engehausen \
-    -DartifactId=de.engehausen.treemap \
-    -Dversion=0.0.4 \
-    -Dpackaging=jar \
-    -DgeneratePom=true
-```
-
-```
-mvn install:install-file \
-    -Dfile=tm_swt_0.0.5.jar \
-    -DgroupId=de.engehausen \
-    -DartifactId=de.engehausen.treemap.swt \
-    -Dversion=0.0.5 \
-    -Dpackaging=jar \
-    -DgeneratePom=true
-```
-
-### Configure Maven
-
-Give Maven some memory (and, as Maven has troubles with German locale on Mac, switch to English):
-
+*Mac OS X / Linux*
 ```
 export MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=500m"
-export LANG=en_US.UTF-8
+```
+
+*Windows*
+```
+set MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=500m"
 ```
 
 ### Build
@@ -59,20 +32,11 @@ Run Maven 3.0.x in the 'portfolio-app' directory:
 mvn clean install
 ```
 
-
-Create a new version with Tycho's version command:
-
-```
-mvn org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion=X.Y.Z-SNAPSHOT
-```
-(and, as Tycho skips it, remember to edit the name.abuchen.portfolio.product file manually)
-
-
 ## Developing with Eclipse
 
 ### Setup
 
-To develop, use [Eclipse 3.7.2 or later](http://eclipse.org/downloads/) plus the Plug-in Development Tools (PDT).
+To develop, use [Eclipse Kepler](http://eclipse.org/downloads/) plus the Plug-in Development Tools (PDT).
 
 Clone the git repository.
 
@@ -84,7 +48,7 @@ After importing the Portfolio Performance projects in Eclipse, they will not com
 
 ### Generate Target Platform
 
-Run Maven *once* with the following parameter:
+Run Maven *once* in the *'portfolio-app' directory* with the following parameter:
 ```
 mvn clean install -Dgenerate-target-platform=true
 ```
